tests/packaging-test/test_out/invalid-link.txt
| invalid-link:1:17
| deps { water git "github.com/jakubDoka/water-kun" }
|                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ executing: git clone --depth 1 --filter blob:none https://github.com/jakubDoka/water-kun \\?\C:\src\rust\catalyst\tests\packaging-test\invalid-link\deps\github.com\jakubDoka\water-kun\main

| invalid-link:1:17
| deps { water git "github.com/jakubDoka/water-kun" }
|                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ git error:
Cloning into '\\?\C:\src\rust\catalyst\tests\packaging-test\invalid-link\deps\github.com\jakubDoka\water-kun\main'...
remote: Repository not found.
fatal: repository 'https://github.com/jakubDoka/water-kun/' not found


